# rustcta

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_QUALITY_CHECKLIST.md  Cargo.toml  Dockerfile.prod  FEATURES.md  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_RULES.md  README.md  docker-compose.yml  dockerfile  exchange_sync_latency_test.py  grid_strategy_example.toml  setup-github.bat  start_strategies.sh  快速部署指南.md
apps/backtest/: Cargo.toml
apps/backtest/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_contract_smoke.rs
apps/control-api/: Cargo.toml
apps/control-api/src/: lib.rs  main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: config.rs  lib.rs  main.rs
apps/supervisor/: Cargo.toml
apps/supervisor/src/: main.rs
apps/supervisor/tests/: cli_contract.rs
crates/rustcta-backtest/: Cargo.toml
crates/rustcta-backtest/src/: factors.rs  indicators.rs  indicators_impl.rs  lib.rs  offline_runtime.rs  replay.rs  replay_impl.rs  runtime_support.rs  schema.rs  schema_impl.rs  scoring.rs  strategy.rs  symbol.rs
crates/rustcta-backtest/src/data/: depth_capture_impl.rs  depth_dataset_impl.rs  exchange_metadata_impl.rs  kline_dataset_impl.rs  mod.rs  trade_capture_impl.rs  trade_dataset_impl.rs
crates/rustcta-backtest/src/matching/: book.rs  engine.rs  engine_impl.rs  ledger.rs  ledger_impl.rs  mod.rs
crates/rustcta-control-api/: Cargo.toml
crates/rustcta-control-api/src/: lib.rs  models.rs  read_models.rs  router.rs  routes.rs  state.rs
crates/rustcta-cross-arb-live-runner/: Cargo.toml
crates/rustcta-cross-arb-live-runner/src/: lib.rs
crates/rustcta-event-ledger/: Cargo.toml
crates/rustcta-event-ledger/src/: lib.rs
crates/rustcta-exchange-api/: Cargo.toml
crates/rustcta-exchange-api/src/: account.rs  account_control.rs  adapter.rs  capabilities.rs  client.rs  context.rs  error.rs  lib.rs  market.rs  order.rs  protocol.rs  provider.rs  readonly.rs  streams.rs  tests.rs  types.rs
crates/rustcta-exchange-gateway/: Cargo.toml
crates/rustcta-exchange-gateway/src/: admin_audit.rs  batch.rs  client.rs  client_helpers.rs  error.rs  http.rs  lib.rs  mock.rs  mock_handlers.rs  orderbook_state.rs  protocol.rs  reconciliation.rs  request_spec.rs  security.rs  signing_spec.rs  status.rs  streams.rs  tests.rs
crates/rustcta-exchange-gateway/src/adapters/: mod.rs  paper.rs  paper_tests.rs
crates/rustcta-exchange-gateway/src/adapters/aark/: config.rs  endpoint_mapping.yaml  mod.rs  parser.rs  private.rs  public.rs  signing.rs  streams.rs  tests.rs  toolchain.rs  transport.rs
crates/rustcta-exchange-gateway/src/protocol/: legacy.rs  operation.rs  validation.rs
crates/rustcta-exchange-gateway/src/tests/: admin_audit.rs  batch.rs  client.rs  http.rs  mock_gateway.rs  reconciliation.rs  security.rs  status.rs
crates/rustcta-exchange-gateway/tests/: kraken_gateway.rs  myokx_profile.rs  task18_btcturk_luno.rs  task3_active_runtime_surface.rs  task5_dex_adapters.rs  task7_planner.rs
crates/rustcta-execution-api/: Cargo.toml
crates/rustcta-execution-api/src/: lib.rs
crates/rustcta-execution-router/: Cargo.toml
crates/rustcta-execution-router/src/: lib.rs
crates/rustcta-reporting/: Cargo.toml
crates/rustcta-reporting/src/: account_position_report.rs  lib.rs  trend_report.rs
crates/rustcta-runtime-control/: Cargo.toml
crates/rustcta-runtime-control/src/: lib.rs
crates/rustcta-runtime-control/src/control/: mod.rs
crates/rustcta-runtime-control/src/live_preflight/: config.rs  mod.rs  report.rs  small_live_gate.rs  types.rs
crates/rustcta-runtime-control/src/risk/: disabled_registry.rs  hedge_policy.rs  mod.rs
crates/rustcta-runtime-control/src/scanner/: exchange_roles.rs  five_exchange_spot_models.rs  mod.rs  symbol_coverage.rs  types.rs
crates/rustcta-smart-money/: Cargo.toml
crates/rustcta-smart-money/src/: lib.rs
crates/rustcta-smart-money/src/smart_money/: alpha.rs  binance_replay.rs  domain.rs  filtering.rs  hyperliquid_wallet.rs  mod.rs  position.rs  risk.rs  simulation.rs
crates/rustcta-smart-money/tests/: smart_money_binance_replay.rs  smart_money_core.rs  smart_money_pipeline.rs
crates/rustcta-strategy-sdk/: Cargo.toml
crates/rustcta-strategy-sdk/src/: lib.rs
crates/rustcta-types/: Cargo.toml
crates/rustcta-types/src/: lib.rs  money.rs
strategies/cross-exchange-arbitrage/: Cargo.toml
strategies/cross-exchange-arbitrage/src/: app_runtime.rs  core.rs  lib.rs  runtime_contract.rs
strategies/cross-exchange-arbitrage/tests/: dual_taker_contract.rs  runtime_contract.rs
strategies/funding-spread-expansion-maker/: Cargo.toml
strategies/funding-spread-expansion-maker/src/: app_runtime.rs  core.rs  lib.rs  runtime_contract.rs
strategies/hedged-grid/: Cargo.toml
strategies/hedged-grid/src/: core.rs  lib.rs
strategies/spot-futures-arbitrage/: Cargo.toml
strategies/spot-futures-arbitrage/src/: core.rs  lib.rs  runtime_contract.rs
strategies/spot-spot-arbitrage/: Cargo.toml
strategies/spot-spot-arbitrage/src/: config.rs  core.rs  execution.rs  fees.rs  inventory.rs  lib.rs  lifecycle.rs  market_data.rs  paper.rs  replay_report.rs  runtime_contract.rs
strategies/spot-spot-arbitrage/tests/: five_exchange_spot_scanner.rs  spot_spot_live_config.rs
strategies/unified-arbitrage/: Cargo.toml
strategies/unified-arbitrage/src/: core.rs  lib.rs
strategies/unified-arbitrage/tests/: unified_arbitrage_contract.rs
tools/ops/: Cargo.toml
tools/ops/src/: account_position_render.rs  contract_readonly_canary.rs  gateio_bitget_spot_symbols.rs  hyperliquid_self_test.rs  lib.rs  main.rs  private_ws_observe.rs  private_ws_probe.rs  safety.rs  ws_config_probe.rs  ws_proxy_probe.rs
tools/ops/tests/: cli_smoke.rs
web-ui/dioxus/: Cargo.toml  Dioxus.toml  index.html
web-ui/dioxus/assets/: main.css
web-ui/dioxus/src/: api.rs  api_keys.rs  app.rs  console_pages.rs  cross_arb.rs  dashboard_panels.rs  exchange_latency.rs  funding_arb.rs  i18n.rs  main.rs  overview.rs  spot_arb.rs  spot_futures_arb.rs  storage.rs  strategies.rs  types.rs  ui.rs  utils.rs  workspace.rs
(+5123 files in other folders)
