[package]
name = "rustcta"
version = "0.3.0"
edition = "2021"
default-run = "rustcta"


[features]
default = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
url = "2.4"
async-trait = "0.1"
urlencoding = "2.1"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
lru = "0.12"
parking_lot = "0.12"
once_cell = "1.19"
rand = "0.8"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
crossbeam = "0.8"
clickhouse = { version = "0.11", features = ["time"] }
rust_decimal = { version = "1.33", features = ["serde", "maths"] }
rust_decimal_macros = "1.33"

[[bin]]
name = "rustcta"
path = "src/main.rs"
