[package]
name = "rustcta"
version = "0.3.9"
edition = "2021"
default-run = "rustcta"

[workspace]
members = [
    ".",
    "crates/rustcta-types",
    "crates/rustcta-exchange-api",
    "crates/rustcta-exchange-gateway",
    "crates/rustcta-execution-api",
    "crates/rustcta-execution-router",
    "crates/rustcta-event-ledger",
    "crates/rustcta-strategy-sdk",
    "crates/rustcta-supervisor",
    "crates/rustcta-control-api",
    "crates/rustcta-core-compat",
    "crates/rustcta-backtest",
    "crates/rustcta-reporting",
    "apps/gateway",
    "apps/supervisor",
    "apps/control-api",
    "apps/cli",
    "apps/backtest",
    "tools/ops",
    "strategies/avellaneda-stoikov",
    "strategies/spot-spot-arbitrage",
    "strategies/cross-exchange-arbitrage",
    "strategies/funding-arbitrage",
    "strategies/hedged-grid",
    "strategies/mean-reversion",
    "strategies/poisson-market-maker",
    "strategies/range-grid",
    "strategies/short-ladder-live",
    "strategies/trend",
]
resolver = "2"

[workspace.package]
version = "0.3.9"
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

rustcta-types = { path = "crates/rustcta-types" }
rustcta-exchange-api = { path = "crates/rustcta-exchange-api" }
rustcta-exchange-gateway = { path = "crates/rustcta-exchange-gateway" }
rustcta-execution-api = { path = "crates/rustcta-execution-api" }
rustcta-execution-router = { path = "crates/rustcta-execution-router" }
rustcta-event-ledger = { path = "crates/rustcta-event-ledger" }
rustcta-strategy-sdk = { path = "crates/rustcta-strategy-sdk" }
rustcta-supervisor = { path = "crates/rustcta-supervisor" }
rustcta-control-api = { path = "crates/rustcta-control-api" }
rustcta-core-compat = { path = "crates/rustcta-core-compat" }
rustcta-backtest = { path = "crates/rustcta-backtest" }
rustcta-reporting = { path = "crates/rustcta-reporting" }
rustcta-tools-ops = { path = "tools/ops" }


[features]
default = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
flate2 = "1.0"
url = "2.4"
async-trait = "0.1"
urlencoding = "2.1"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
lru = "0.12"
parking_lot = "0.12"
once_cell = "1.19"
rand = "0.8"
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-log = "0.2"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
crossbeam = "0.8"
clickhouse = { version = "0.11", features = ["time"] }
rust_decimal = { version = "1.33", features = ["serde", "maths"] }
rust_decimal_macros = "1.33"
sha3 = "0.10"
secp256k1 = { version = "0.27", features = ["recovery"] }
rmp-serde = "1.1"
prost = "0.12"
rustcta-reporting.workspace = true
rustcta-strategy-sdk.workspace = true
rustcta-strategy-funding-arbitrage = { path = "strategies/funding-arbitrage" }
rustcta-strategy-range-grid = { path = "strategies/range-grid" }
rustcta-strategy-spot-spot-arbitrage = { path = "strategies/spot-spot-arbitrage" }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dashmap = "6.1"
hashbrown = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "rustcta"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dev-dependencies]
tempfile = "3.13"
tower = "0.5"
