[workspace]
members = [
    "crates/rustcta-types",
    "crates/rustcta-exchange-api",
    "crates/rustcta-exchange-gateway",
    "crates/rustcta-execution-api",
    "crates/rustcta-execution-router",
    "crates/rustcta-event-ledger",
    "crates/rustcta-strategy-sdk",
    "crates/rustcta-supervisor",
    "crates/rustcta-control-api",
    "crates/rustcta-reporting",
    "crates/rustcta-smart-money",
    "crates/rustcta-runtime-control",
    "apps/gateway",
    "apps/supervisor",
    "apps/control-api",
    "apps/cli",
    "tools/ops",
    "strategies/avellaneda-stoikov",
    "strategies/spot-spot-arbitrage",
    "strategies/cross-exchange-arbitrage",
    "strategies/funding-arbitrage",
    "strategies/hedged-grid",
    "strategies/mean-reversion",
    "strategies/poisson-market-maker",
    "strategies/range-grid",
    "strategies/short-ladder-live",
    "strategies/trend",
]
resolver = "2"

[workspace.package]
version = "0.3.15"
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
md5 = "0.7"

rustcta-types = { path = "crates/rustcta-types" }
rustcta-exchange-api = { path = "crates/rustcta-exchange-api" }
rustcta-exchange-gateway = { path = "crates/rustcta-exchange-gateway" }
rustcta-execution-api = { path = "crates/rustcta-execution-api" }
rustcta-execution-router = { path = "crates/rustcta-execution-router" }
rustcta-event-ledger = { path = "crates/rustcta-event-ledger" }
rustcta-strategy-sdk = { path = "crates/rustcta-strategy-sdk" }
rustcta-supervisor = { path = "crates/rustcta-supervisor" }
rustcta-control-api = { path = "crates/rustcta-control-api" }
rustcta-reporting = { path = "crates/rustcta-reporting" }
rustcta-smart-money = { path = "crates/rustcta-smart-money" }
rustcta-runtime-control = { path = "crates/rustcta-runtime-control" }
rustcta-tools-ops = { path = "tools/ops" }
