[package]
name = "rustcta-backtest-app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
rustcta-backtest = { workspace = true, features = ["legacy-runtime"] }

[[bin]]
name = "rustcta-backtest"
path = "src/main.rs"
