[package]
name = "rustcta-industrial-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustcta-event-ledger.workspace = true
rustcta-supervisor.workspace = true
rustcta-tools-ops.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "rustcta-industrial"
path = "src/main.rs"
