[package]
name = "rustcta-control-api-app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
axum.workspace = true
tower-http = { workspace = true, features = ["fs"] }
rustcta-control-api.workspace = true
rustcta-event-ledger.workspace = true
rustcta-supervisor.workspace = true

[dev-dependencies]
tower = "0.5"

[[bin]]
name = "rustcta-control-api"
path = "src/main.rs"
