[package]
name = "rustcta-gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
rustcta-exchange-api.workspace = true
rustcta-exchange-gateway.workspace = true
rustcta-cross-arb-live-runner = { path = "../../crates/rustcta-cross-arb-live-runner" }
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tower = "0.5"

[lib]
name = "rustcta_gateway_app"
path = "src/lib.rs"

[[bin]]
name = "rustcta-gateway"
path = "src/main.rs"

[[bin]]
name = "cross-exchange-arbitrage-live-runner"
path = "src/bin/cross_exchange_arbitrage_live_runner.rs"
