[package]
name = "rustcta-gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
rustcta-exchange-api.workspace = true
rustcta-exchange-gateway.workspace = true
rustcta-execution-api.workspace = true
rustcta-execution-router.workspace = true
rustcta-observability.workspace = true
rustcta-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tower = "0.5"

[lib]
name = "rustcta_gateway_app"
path = "src/lib.rs"

[[bin]]
name = "rustcta-gateway"
path = "src/main.rs"

[[bin]]
name = "local-gateway-smoke"
path = "src/bin/local_gateway_smoke.rs"
