[package]
name = "rustcta-supervisor-app"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde_json.workspace = true
rustcta-supervisor.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = "0.5"

[[bin]]
name = "rustcta-supervisor"
path = "src/main.rs"
