[package]
name = "rustcta-backtest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
legacy-runtime = ["dep:rustcta"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rustcta-types.workspace = true
serde.workspace = true
serde_json.workspace = true
rustcta = { path = "../..", optional = true }

[dev-dependencies]
tempfile = "3.13"
