[package]
name = "rustcta-control-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rustcta-event-ledger.workspace = true
rustcta-types.workspace = true
rustcta-supervisor.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = "0.5"
