[package]
name = "rustcta-cross-arb-live-runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rustcta-exchange-api.workspace = true
rustcta-exchange-gateway.workspace = true
rustcta-execution-api.workspace = true
rustcta-execution-router.workspace = true
rustcta-strategy-sdk.workspace = true
rustcta-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true

rustcta-strategy-cross-exchange-arbitrage = { path = "../../strategies/cross-exchange-arbitrage" }
