[package]
name = "rustcta-event-ledger"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Append-only event, order, fill, account, and audit ledger contracts for RustCTA"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rustcta-execution-api = { path = "../rustcta-execution-api" }
rustcta-types = { path = "../rustcta-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
