[package]
name = "rustcta-exchange-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
rustcta-types = { path = "../rustcta-types" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
