[package]
name = "rustcta-exchange-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustcta-types = { path = "../rustcta-types" }

[dev-dependencies]
tokio.workspace = true
