[package]
name = "rustcta-exchange-gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
rustcta-exchange-api.workspace = true
rustcta-types.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = "0.5"
