[package]
name = "rustcta-exchange-gateway"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
md5.workspace = true
url.workspace = true
uuid.workspace = true
urlencoding = "2.1"
ed25519-dalek = { version = "2.1", features = ["std"] }
sha3 = "0.10"
secp256k1 = { version = "0.27", features = ["recovery"] }
rmp-serde = "1.1"
rustcta-exchange-api.workspace = true
rustcta-types.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = "0.5"
