[package]
name = "rustcta-execution-router"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustcta-exchange-gateway.workspace = true
rustcta-exchange-api.workspace = true
rustcta-execution-api.workspace = true
rustcta-event-ledger.workspace = true
rustcta-types.workspace = true
tokio.workspace = true
