[package]
name = "rustcta-strategy-sdk"
version = "0.1.0"
edition = "2021"
description = "Safe strategy development interface for RustCTA strategies"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
