[package]
name = "rustcta-types"
version = "0.1.0"
edition = "2021"
description = "Stable serializable domain types for RustCTA platform boundaries"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
