[package]
name = "rustcta-strategy-cross-exchange-arbitrage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rustcta-strategy-sdk.workspace = true

[dev-dependencies]
tokio.workspace = true
