[package]
name = "rustcta-strategy-cross-exchange-arbitrage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rustcta-strategy-sdk.workspace = true
tokio.workspace = true

[dev-dependencies]

[[bin]]
name = "cross-exchange-arbitrage-runtime"
path = "src/bin/cross_exchange_arbitrage_runtime.rs"
