[package]
name = "rustcta-strategy-funding-spread-expansion-maker"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv = "0.15"
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rustcta-exchange-gateway.workspace = true
rustcta-execution-api.workspace = true
rustcta-execution-router.workspace = true
rustcta-event-ledger.workspace = true
rustcta-tools-ops.workspace = true
rustcta-strategy-sdk.workspace = true
rustcta-types.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]

[[bin]]
name = "funding-spread-expansion-maker-runtime"
path = "src/bin/funding_spread_expansion_maker_runtime.rs"

[[bin]]
name = "funding-spread-expansion-maker-ws-local"
path = "src/bin/funding_spread_expansion_maker_ws_local.rs"
