[package]
name = "rustcta-strategy-hedged-grid"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rustcta-strategy-sdk.workspace = true
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio.workspace = true

[[bin]]
name = "hedged-grid-runtime"
path = "src/bin/hedged_grid_runtime.rs"
