[package]
name = "rustcta-strategy-spot-spot-arbitrage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rustcta-strategy-sdk.workspace = true
tokio.workspace = true

[dev-dependencies]

[[bin]]
name = "spot-spot-arbitrage-runtime"
path = "src/bin/spot_spot_arbitrage_runtime.rs"
