[package]
name = "rustcta-strategy-unified-arbitrage"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "unified-arbitrage-runtime"
path = "src/bin/unified_arbitrage_runtime.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rustcta-strategy-sdk.workspace = true
tokio.workspace = true
