[package]
name = "rustcta-tools-ops"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv = "0.15"
flate2 = "1.0"
futures-util.workspace = true
log = "0.4.27"
reqwest.workspace = true
rmp-serde = "1.1"
rustcta-types.workspace = true
rustcta-reporting.workspace = true
rustcta-smart-money.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
url = "2.4"

[[bin]]
name = "rustcta-tools-ops"
path = "src/main.rs"
