[package]
name = "rustcta-control-panel"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
gloo-net = "0.7"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
